--- a/to_do_list/package.json
+++ b/to_do_list/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://ayushiverma24.github.io/CRUD-To-Do-App-React",
   "name": "to_do_list",
   "version": "0.1.0",
   "private": true,
@@ -17,6 +18,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -38,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
